##
## Heccer : a compartmental solver that implements efficient Crank-Nicolson
## integration for neuronal models.
##

##############################################################################
##'
##' Heccer : testbed C implementation
##'
##' Copyright (C) 2006-2007 Hugo Cornelis
##'
##' functional ideas ..	Hugo Cornelis, hugo.cornelis@gmail.com
##'
##' coding ............	Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################


SUBDIRS = code genesis glue .

#t automake does not allow to pass in arguments for tests ?

check_SCRIPTS = $(srcdir)/neurospaces_harness 

TESTS = $(srcdir)/neurospaces_harness

test: check

