##
## Heccer : a compartmental solver that implements efficient Crank-Nicolson
## integration for neuronal models.
##

##############################################################################
##'
##' Heccer : testbed C implementation
##'
##' Copyright (C) 2006-2008 Hugo Cornelis
##'
##' functional ideas ..	Hugo Cornelis, hugo.cornelis@gmail.com
##'
##' coding ............	Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################


noinst_HEADERS = \
	.gdbinit \
	c1c2p1.g \
	c1c2p2.g \
	calloutInjector.g \
	channel1-nernst1.g \
	channel2-nernst1.g \
	double.g \
	fork3p.g \
	fork4p1.g \
	fork4p2.g \
	fork4p3.g \
	pool-feedback.g \
	pool1-contributors2.g \
	pool1-nernst.g \
	pool1.g \
	pool2.g \
	single.g \
	singlea-naf.g \
	spiker1.g \
	spiker2.g \
	springmass.g \
	springmass3.g \
	table-cap.g \
	table-cat.g \
	table-k2.g \
	table-ka.g \
	table-kc.g \
	table-kdr.g \
	table-kh.g \
	table-km.g \
	table-naf.g \
	table-nap.g \
	tensizesp.g \
	triple.g \
	vclamp-passive.g

